--- a/2016_11_03_PuppetConf.html
+++ b/2016_11_03_PuppetConf.html
@@ -14,6 +14,21 @@
         font-weight: normal;
       }
       .remark-code, .remark-inline-code { font-family: 'Ubuntu Mono'; }
+      .inverse {
+        background: #272822;
+        color: #777872;
+        text-shadow: 0 0 20px #333;
+      }
+      .inverse h1, .inverse h2 {
+        color: #f3f3f3;
+        line-height: 0.8em;
+      }
+
+      /* Slide-specific styling */
+      #slide-inverse .footnote {
+        bottom: 12px;
+        left: 20px;
+      }
     </style>
   </head>
   <body>
@@ -46,7 +61,40 @@ better results, and break down barriers and finger pointing.
 
 ---
 
-# PuppetConf 2016
+class: inverse
+![PuppetConf](https://puppet.com/themes/hoverboard/images/puppetconf/2016/puppetconf-logo.png)
+
+---
+
+# What IS PuppetConf?
+--
+But first... what is Puppet?
+
+---
+# What is Puppet?
+--
+
+[The Puppet approach](https://puppet.com/product/how-puppet-works)
+
+Puppet provides a standard way of delivering and operating software, no matter where it runs. With the Puppet approach, you define what you want your apps and infrastructure to look like using a common easy-to-read language. From there you can share, test and enforce the changes you want to make across your datacenter. And at every step of the way, you have the visibility and reporting you need to make decisions and prove compliance. 
+
+The result: you get a standard way of automating all of it, at scale.
+---
+# Schedule of events
+--
+
+- https://puppetconf2016.sched.org/
+
+---
+# My Schedule
+--
+
+#### October 19th
+--
+
+
+
+
 
 
 
