devops intro slide changes

--- a/2016_11_03_PuppetConf.html
+++ b/2016_11_03_PuppetConf.html
@@ -61,6 +61,17 @@ better results, and break down barriers and finger pointing.
 
 ---
 
+# Future Presentations
+
+---
+
+# Job Opportunities
+* AppliedTrust
+  * AppliedTrust is hiring in Philadelphia, Dallas and Boulder offices.
+  * For more information, see https://www.appliedtrust.com/jobs/ or talk to me afterwards
+
+---
+
 class: inverse
 ![PuppetConf](https://puppet.com/themes/hoverboard/images/puppetconf/2016/puppetconf-logo.png)
 
