--- a/2016_11_03_PuppetConf.html
+++ b/2016_11_03_PuppetConf.html
@@ -80,6 +80,34 @@ Puppet provides a standard way of delivering and operating software, no matter w
 
 The result: you get a standard way of automating all of it, at scale.
 ---
+###What we're going to cover
+
+--
+
+- Quickly show the schedule
+
+--
+
+- Contributor Summit
+
+--
+
+
+- Talk about the Keynote and the vibe from Puppetlabs
+
+???
+- Talk about how much the company helps feedback into the open source community
+- how little was actually about puppet in the keynotes, how much was about
+  - culture
+  - community
+  - strategy
+  - cloud (api based, not location based)
+  - repeatability and measurablility
+--
+
+- Deep dive into a few of the really interesting talks and experiences
+
+---
 # Schedule of events
 --
 
@@ -90,11 +118,81 @@ The result: you get a standard way of automating all of it, at scale.
 --
 
 #### October 19th
+
+---
+#### October 20th
 --
 
+- 9:00
+ - Keynote
+
+--
+- 11:15 
+  - Hallway track with John Willis, Gene Kim
+
+--
+- 12:00
+ - The DevOps Handbook
+
+--
+- 1:30
+ - Puppet Troubleshooting with Thomas Uphill
+ - [Link to presentation](https://twitter.com/uphillian/status/789218304619458560)
+
+--
+- 2:30
+ - [Turning Pain Into Gain: A Unit Testing Story](https://puppetconf2016.sched.org/event/6fjL/turning-pain-into-gain-a-unit-testing-story-nadeem-ahmad-jordan-moldow-box)
+
+???
+
+---
+
+???
+-
+11:15 slot 
+ - I actually missed all of these, but I was spending my time after the keynote hallway tracking with John Willis.
+  - Talked with him about issues in my industry
+   - He talked about Jeffery Snover, and how he was almost scorned while at microsoft.
+ - Interesting Talks in this slot..
+  -  https://puppetconf2016.sched.org/event/6fj2/scaling-puppet-and-puppet-culture-at-github-kevin-paulisse-github
+  - rnelson0 https://rnelson0.com/2016/10/29/puppetconf-followup-upgrading-to-puppet-4/
+  - https://puppetconf2016.sched.org/event/6fj6/service-discovery-and-puppet-marc-cluet-ukon-cherry
+  - https://puppetconf2016.sched.org/event/6fj7/delivering-premium-quality-modules-using-beaker-and-vmpooler-for-multi-platform-testing-rene-last-kpn-bv-dimitri-tischenko-myndrik
+  - https://puppetconf2016.sched.org/event/6fjH/a-year-in-open-source-automated-compliance-with-puppet-trevor-vaughan-onyx-point-inc
+   - https://twitter.com/peiriannydd
+   - https://twitter.com/PeterSouter/status/789174110400020482
+   - http://lh3.googleusercontent.com/ZE_FlRhIjlfueaWLxIK0_eFkUgJ9rEc2wg-akVq_D9ghFk4i3BWA52tdv5mZ4rVyDYR38hPIC-j-ZT3uY0IK=s0
+---
+
+October 20th
+Day 1
+Keynote 
 
 
+---
 
+October 21st
+Day 2
+Keynote
+
+---
+
+???
+Information
+ ![VoxPupuli](https://voxpupuli.org/static/images/8bit-vox.png)
+ Jeffery Snover picture ![Snover](https://static.sched.org/a10/3163274/avatar.jpg.320x320px.jpg?9bf)
+ ![Gene Kim](https://static.sched.org/a10/3025454/avatar.jpg.320x320px.jpg?d38)
+ ![Jez Humble](https://static.sched.org/a9/3025451/avatar.jpg.320x320px.jpg?3ac)
+ ![John Willis](https://static.sched.org/a10/3416934/avatar.jpg.320x320px.jpg?42c)
+ ![R. Tyler Croy](https://static.sched.org/a9/3025444/avatar.jpg.320x320px.jpg?d11)
+ ![David Danzillio](https://static.sched.org/a9/3025445/avatar.jpg.320x320px.jpg?f88)
+ ![Thomas Limoncelli](https://static.sched.org/a9/3025462/avatar.jpg.320x320px.jpg?a46)
+ ![Rob Nelson](https://static.sched.org/a9/3025470/avatar.jpg.320x320px.jpg?459)
+ ![Sean Porter](https://static.sched.org/a9/3025473/avatar.jpg.320x320px.jpg?b35)
+ ![Gareth Rushgrove](https://static.sched.org/a9/3025478/avatar.jpg.320x320px.jpg?534)
+ ![Michael Stahnke](https://static.sched.org/a9/3025487/avatar.jpg.320x320px.jpg?1d9)
+ ![Thomas Uphill](https://static.sched.org/a9/3025491/avatar.jpg.320x320px.jpg?c2b)
+ ![Seth Vargo](https://static.sched.org/a9/3025492/avatar.jpg.320x320px.jpg?b98)
 
 
 
