Days mostly fleshed out, could put a little more on the summit, time to work on demos, then come back to that

--- a/2016_11_03_PuppetConf.html
+++ b/2016_11_03_PuppetConf.html
@@ -128,9 +128,20 @@ The result: you get a standard way of automating all of it, at scale.
 
 ---
 # My Schedule
---
-
+---
 #### October 19th
+
+- Contributor Summit
+ - 
+- Welcome Reception
+
+???
+ Stay puff marshmallow man - https://twitter.com/nibalizer/status/788871477646864384
+Contributor Summit
+https://docs.google.com/document/d/13ZVCcaFNyqOuR7ttBG4QtjaFh9Fs-ivcu8olHA-B-UQ/edit
+https://github.com/puppetlabs/r10k/issues/567
+Some people were talking about puppet forge mirroring with pulp (http://pulpproject.org/2012/08/29/mirroring-puppet-forge-with-pulp/)
+Danzillo and Henrick, Cylomatic complexity calculations for puppet code
 
 ---
 #### October 20th
@@ -196,9 +207,28 @@ Derployments
 
 ---
 
-October 21st
-Day 2
-Keynote
+#### October 21th
+
+- 9:00
+ - Keynote
+
+--
+- 11:15
+ - [Using HashiCorp's Vault With Puppet – Seth Vargo, HashiCorp](https://puppetconf2016.sched.org/event/6fjv/using-hashicorps-vault-with-puppet-seth-vargo-hashicorp)
+
+--
+- 1:30
+ - [Running Puppet Software in Docker Containers – Gareth Rushgrove](https://puppetconf2016.sched.org/event/6fk2/running-puppet-software-in-docker-containers-gareth-rushgrove-puppet)
+ - puppet docker build
+
+--
+- 2:30
+ - [DevOps Where You Wouldn't Have Expected – Thomas Limoncelli, StackOverflow.com](https://puppetconf2016.sched.org/event/6fk7/devops-where-you-wouldnt-have-expected-thomas-limoncelli-stackoverflowcom)
+
+--
+- 3:45
+ - [The Future of Testing Puppet Code – Gareth Rushgrove](https://puppetconf2016.sched.org/event/6fkH/the-future-of-testing-puppet-code-gareth-rushgrove-puppet)
+
 
 ---
 
